--- a/docker/Dockerfile.kaldi-vosk-server
+++ b/docker/Dockerfile.kaldi-vosk-server
@@ -1,11 +1,10 @@
 FROM debian:10.4
 
-ARG KALDI_MKL
-
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         g++ \
         bzip2 \
+	vim \
         unzip \
         make \
         wget \
@@ -34,18 +33,9 @@ RUN \
     && sed -i 's:status=0:exit 0:g' extras/check_dependencies.sh \
     && sed -i 's:--enable-ngram-fsts:--enable-ngram-fsts --disable-bin:g' Makefile \
     && make -j $(nproc) openfst cub \
-    && if [ "x$KALDI_MKL" != "x1" ] ; then \
-          extras/install_openblas_clapack.sh; \
-       else \
-          extras/install_mkl.sh; \
-       fi \
-    \
+    && extras/install_openblas_clapack.sh \
     && cd /opt/kaldi/src \
-    && if [ "x$KALDI_MKL" != "x1" ] ; then \
-          ./configure --mathlib=OPENBLAS_CLAPACK --shared; \
-       else \
-          ./configure --mathlib=MKL --shared; \
-       fi \
+    && ./configure --mathlib=OPENBLAS_CLAPACK --shared \
     && sed -i 's:-msse -msse2:-msse -msse2:g' kaldi.mk \
     && sed -i 's: -O1 : -O3 :g' kaldi.mk \
     && make -j $(nproc) online2 lm rnnlm \
@@ -54,7 +44,7 @@ RUN \
     && cd /opt/vosk-api/python \
     && KALDI_MKL=$KALDI_MKL KALDI_ROOT=/opt/kaldi python3 ./setup.py install --single-version-externally-managed --root=/ \
     \
-    && git clone https://github.com/alphacep/vosk-server /opt/vosk-server \
+    && git clone https://github.com/mapledxf/vosk-server.git /opt/vosk-server \
     && pip3 install grpcio-tools \
     && cd /opt/vosk-server/grpc \
     && python3 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. stt_service.proto \
@@ -63,3 +53,7 @@ RUN \
     && rm -rf /opt/kaldi \
     && rm -rf /root/.cache \
     && rm -rf /var/lib/apt/lists/*
+
+EXPOSE 9998
+WORKDIR /opt/vosk-server/websocket
+CMD [ "python3", "./asr_server.py", "/opt/model" ]
